--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ https://templatemo.com/tm-531-reflux
                   <h4>Bienvenue sur mon portfolio !</h4>
 
                   <p>
-                    Je m’appelle Tarchoun Oussama et je suis actuellement en formation en tant que de developpeur web et web mobile, au centre de l'AFPA de la valette.<br />
+                    Je m’appelle Tarchoun Oussama et je suis actuellement en formation en tant que de developpeur web et web mobile, au centre de l'AFPA de la valette du Var (83).<br />
                     J’ai créé ce portfolio afin de vous offrir une vision détaillée de mon parcours.. 
                   </p>
                   <p>
