--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ https://templatemo.com/tm-531-reflux
           <i class="fa fa-times" id="menu-close"></i>
           <div class="container">
             <div class="image">
-              <a href="#"><img src="assets/images/oussama.jpg" alt="" /></a>
+              <a href="#"><img src="assets/images/profile.png" alt="" /></a>
             </div>
             <div class="author-content">
               <h4>Tarchoun Oussama</h4>
@@ -68,7 +68,7 @@ https://templatemo.com/tm-531-reflux
                   <a href="#"><i class="fa fa-dribbble"></i></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fa fa-rss"></i></a>
+                  <a href="https://oussamat83.github.io/"><i class="fab fa-github"></i></a>
                 </li>
               </ul>
             </div>
@@ -101,7 +101,7 @@ https://templatemo.com/tm-531-reflux
                     J’ai créé ce portfolio afin de vous offrir une vision détaillée de mon parcours.. 
                   </p>
                   <p>
-                    Bonne visite visite !
+                    Bonne visite !
                   </p>
                 </div>
               </div>
@@ -279,8 +279,8 @@ https://templatemo.com/tm-531-reflux
                         data-title="Caption"
                         ><i class="fa fa-search"></i
                       ></a>
-                      <h4>First Title</h4>
-                      <span>free to use our template</span>
+                      <h4>Site mission 2</h4>
+                      <span>Modal et tableau</span>
                     </figcaption>
                   </figure>
                 </div>
@@ -298,8 +298,8 @@ https://templatemo.com/tm-531-reflux
                         data-title="Caption"
                         ><i class="fa fa-search"></i
                       ></a>
-                      <h4>Second Title</h4>
-                      <span>please tell your friends</span>
+                      <h4>Smart Eat</h4>
+                      <span>manger intelligemment</span>
                     </figcaption>
                   </figure>
                 </div>
@@ -317,8 +317,8 @@ https://templatemo.com/tm-531-reflux
                         data-title="Caption"
                         ><i class="fa fa-search"></i
                       ></a>
-                      <h4>Item Third</h4>
-                      <span>customize anything</span>
+                      <h4>Relire</h4>
+                      <span>Lire des livres en streaming</span>
                     </figcaption>
                   </figure>
                 </div>
@@ -336,8 +336,8 @@ https://templatemo.com/tm-531-reflux
                         data-title="Caption"
                         ><i class="fa fa-search"></i
                       ></a>
-                      <h4>Item Fourth</h4>
-                      <span>Re-distribution not allowed</span>
+                      <h4>Site mission 2</h4>
+                      <span>Page accueil</span>
                     </figcaption>
                   </figure>
                 </div>
@@ -355,8 +355,8 @@ https://templatemo.com/tm-531-reflux
                         data-title="Caption"
                         ><i class="fa fa-search"></i
                       ></a>
-                      <h4>Fifth Awesome</h4>
-                      <span>Ut sollicitudin risus</span>
+                      <h4>jeu du serpent</h4>
+                      <span>Kobra kai</span>
                     </figcaption>
                   </figure>
                 </div>
@@ -374,8 +374,8 @@ https://templatemo.com/tm-531-reflux
                         data-title="Caption"
                         ><i class="fa fa-search"></i
                       ></a>
-                      <h4>Awesome Sixth</h4>
-                      <span>Donec eget massa ante</span>
+                      <h4>Relire</h4>
+                      <span>responsive</span>
                     </figcaption>
                   </figure>
                 </div>
