--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ https://templatemo.com/tm-531-reflux
                     <div class="col-md-12">
                       <fieldset>
                         <button type="submit" id="form-submit" class="button">
-                          Envoyer
+                           <a href="mailto:oussamatarchoun83@gmail.com">Envoyer</a>
                         </button>
                       </fieldset>
                     </div>
