mise a jour ocotbre 2021

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
 
     <title>Portfolio Tarchoun Oussama</title>
-<!--
+    <!-- 
 Reflux Template
 https://templatemo.com/tm-531-reflux
 -->
@@ -59,21 +59,29 @@ https://templatemo.com/tm-531-reflux
                   ></a>
                 </li>
                 <li>
-                  <a href="https://twitter.com/?lang=fr"><i class="fa fa-twitter"></i></a>
+                  <a href="https://twitter.com/?lang=fr"
+                    ><i class="fa fa-twitter"></i
+                  ></a>
                 </li>
                 <li>
-                  <a href="https://fr.linkedin.com/"><i class="fa fa-linkedin"></i></a>
+                  <a href="https://fr.linkedin.com/"
+                    ><i class="fa fa-linkedin"></i
+                  ></a>
                 </li>
                 <li>
                   <a href="#"><i class="fa fa-dribbble"></i></a>
                 </li>
                 <li>
-                  <a href="https://oussamat83.github.io/"><i class="fab fa-github"></i></a>
+                  <a href="https://oussamat83.github.io/"
+                    ><i class="fab fa-github"></i
+                  ></a>
                 </li>
               </ul>
             </div>
-            <div class="copyright-text">
-              <p>Copyright 2019 Reflux Design</p>
+            <div class="copyright-text">  
+              <p>Tel: 06 60 82 49 48</p>
+              <p>Email: oussamatarchoun83@gmail.com</p>
+              <p>Copyright 2021 Design</p>
             </div>
           </div>
         </div>
@@ -97,12 +105,13 @@ https://templatemo.com/tm-531-reflux
                   <h4>Bienvenue sur mon portfolio !</h4>
 
                   <p>
-                    Je m’appelle Tarchoun Oussama et je suis actuellement en formation en tant que de developpeur web et web mobile, au centre de l'AFPA de la valette du Var (83).<br />
-                    J’ai créé ce portfolio afin de vous offrir une vision détaillée de mon parcours.. 
+                    Je m’appelle Tarchoun Oussama et je viens de terminer ma
+                    formation en tant que de developpeur web et web mobile, au
+                    centre de l'AFPA de la valette du Var (83).<br />
+                    J’ai créé ce portfolio afin de vous offrir une vision
+                    détaillée de mon parcours..
                   </p>
-                  <p>
-                    Bonne visite !
-                  </p>
+                  <p>Bonne visite !</p>
                 </div>
               </div>
             </div>
@@ -113,13 +122,17 @@ https://templatemo.com/tm-531-reflux
                 <div class="left-text">
                   <h4>Être un développeur ...</h4>
                   <p>
-                    Passionné par les nouvelles technologies, j’ai décidé de poursuivre dans cette voie afin d'en faire mon métier.
+                    Passionné par les nouvelles technologies, j’ai décidé de
+                    poursuivre dans cette voie afin d'en faire mon métier.
                   </p>
                   <p>
-                    Mon parcours m’a permis de développer des compétences dans des domaines variés de l’informatique. 
+                    Mon parcours m’a permis de développer des compétences dans
+                    des domaines variés de l’informatique.
                   </p>
                   <p>
-                    Relever des défis et répondre aux enjeux offerts par les innovations technologiques, tel est mon objectif dans le monde professionnel.
+                    Relever des défis et répondre aux enjeux offerts par les
+                    innovations technologiques, tel est mon objectif dans le
+                    monde professionnel.
                   </p>
                 </div>
               </div>
@@ -139,62 +152,51 @@ https://templatemo.com/tm-531-reflux
             <h2>Mes compétences</h2>
             <div class="line-dec"></div>
             <span
-              >Les langages et les méthodes vu et en cours d'apprentissage.</span
+              >Les langages et les méthodes vu et en cours
+              d'apprentissage.</span
             >
           </div>
           <div class="row">
             <div class="col-md-6">
               <div class="service-item">
                 <div class="first-service-icon service-icon"></div>
-                  <h4>HTML5 &amp; CSS3</h4>
-                    <p>
-                        En cours de progression ...
-                    </p>
-                </div>
+                <h4>HTML5 &amp; CSS3</h4>
+              </div>
             </div>
             <div class="col-md-6">
               <div class="service-item">
                 <div class="second-service-icon service-icon"></div>
                 <h4>JavaScript</h4>
-                  <p>
-                    En cours de progression ...
-                  </p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="service-item">
                 <div class="third-service-icon service-icon"></div>
                 <h4>React</h4>
-                <p>
-                  En cours de progression ...
-                </p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="service-item">
                 <div class="fourth-service-icon service-icon"></div>
                 <h4>PHP</h4>
-                <p>
-                  En cours de progression ...
-                </p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="service-item">
                 <div class="five-service-icon service-icon"></div>
                 <h4>WordPress</h4>
-                <p>
-                  En cours de progression ...
-                </p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="service-item">
                 <div class="six-service-icon service-icon"></div>
                 <h4>MySQL</h4>
-                <p>
-                  En cours de progression ...
-                </p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="service-item">
+                <div class="ten-service-icon service-icon"></div>
+                <h4>MongoDB</h4>
               </div>
             </div>
             <div class="col-md-6">
@@ -225,7 +227,8 @@ https://templatemo.com/tm-531-reflux
             <h2>Mes projets</h2>
             <div class="line-dec"></div>
             <span
-              >Voici les projets que j'ai réalisé tout au long de ma formation.</span
+              >Voici les projets que j'ai réalisé tout au long de ma
+              formation.</span
             >
           </div>
           <div class="row">
@@ -268,10 +271,7 @@ https://templatemo.com/tm-531-reflux
               <div class="isotope-box">
                 <div class="isotope-item" data-type="nature">
                   <figure class="snip1321">
-                    <img
-                      src="assets/images/cap1.jpg"
-                      alt="sq-sample26"
-                    />
+                    <img src="assets/images/cap1.jpg" alt="sq-sample26" />
                     <figcaption>
                       <a
                         href="assets/images/cap1.jpg"
@@ -287,10 +287,7 @@ https://templatemo.com/tm-531-reflux
 
                 <div class="isotope-item" data-type="people">
                   <figure class="snip1321">
-                    <img
-                      src="assets/images/site1.jpg"
-                      alt="sq-sample26"
-                    />
+                    <img src="assets/images/site1.jpg" alt="sq-sample26" />
                     <figcaption>
                       <a
                         href="assets/images/site1.jpg"
@@ -306,10 +303,7 @@ https://templatemo.com/tm-531-reflux
 
                 <div class="isotope-item" data-type="animals">
                   <figure class="snip1321">
-                    <img
-                      src="assets/images/S2.jpg"
-                      alt="sq-sample26"
-                    />
+                    <img src="assets/images/S2.jpg" alt="sq-sample26" />
                     <figcaption>
                       <a
                         href="assets/images/S2.png"
@@ -325,10 +319,7 @@ https://templatemo.com/tm-531-reflux
 
                 <div class="isotope-item" data-type="people">
                   <figure class="snip1321">
-                    <img
-                      src="assets/images/image1.jpg"
-                      alt="sq-sample26"
-                    />
+                    <img src="assets/images/image1.jpg" alt="sq-sample26" />
                     <figcaption>
                       <a
                         href="assets/images/image2.jpg"
@@ -363,13 +354,10 @@ https://templatemo.com/tm-531-reflux
 
                 <div class="isotope-item" data-type="animals">
                   <figure class="snip1321">
-                    <img
-                      src="assets/images/capture1 (1).jpg"
-                      alt="sq-sample26"
-                    />
+                    <img src="assets/images/g2.jpg" alt="sq-sample26" />
                     <figcaption>
                       <a
-                        href="assets/images/capture1 (2).jpg"
+                        href="assets/images/relire.png"
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
@@ -379,6 +367,20 @@ https://templatemo.com/tm-531-reflux
                     </figcaption>
                   </figure>
                 </div>
+                <div class="isotope-item" data-type="animals">
+                  <figure class="snip1321">
+                    <img src="assets/images/cap1.png" alt="sq-sample26" />
+                    <figcaption>
+                      <a
+                        href="assets/images/demo_3.gif"
+                        data-lightbox="image-1"
+                        data-title="Caption"
+                        ><i class="fa fa-search"></i
+                      ></a>
+                      <h4>Les P'tits Chefs</h4>
+                      <span>social-network</span>
+                    </figcaption>
+                  </figure>
               </div>
             </div>
           </div>
@@ -443,14 +445,16 @@ https://templatemo.com/tm-531-reflux
                           class="form-control"
                           id="message"
                           placeholder="Votre message..."
-                          required=""
+                          required="" 
                         ></textarea>
                       </fieldset>
                     </div>
                     <div class="col-md-12">
                       <fieldset>
                         <button type="submit" id="form-submit" class="button">
-                           <a href="mailto:oussamatarchoun83@gmail.com">Envoyer</a>
+                          <a href="mailto:oussamatarchoun83@gmail.com"
+                            >Envoyer</a
+                          >
                         </button>
                       </fieldset>
                     </div>
@@ -486,7 +490,7 @@ https://templatemo.com/tm-531-reflux
         if (isAnimate) {
           $("body, html").animate(
             {
-              scrollTop: reqSectionPos
+              scrollTop: reqSectionPos,
             },
             800
           );
@@ -496,7 +500,7 @@ https://templatemo.com/tm-531-reflux
       };
 
       var checkSection = function checkSection() {
-        $(".section").each(function() {
+        $(".section").each(function () {
           var $this = $(this),
             topEdge = $this.offset().top - 80,
             bottomEdge = topEdge + $this.height(),
@@ -513,12 +517,12 @@ https://templatemo.com/tm-531-reflux
         });
       };
 
-      $(".main-menu").on("click", "a", function(e) {
+      $(".main-menu").on("click", "a", function (e) {
         e.preventDefault();
         showSection($(this).attr("href"), true);
       });
 
-      $(window).scroll(function() {
+      $(window).scroll(function () {
         checkSection();
       });
     </script>
